--- a/modeling/KoBART-summarization/1_model_training.ipynb
+++ b/modeling/KoBART-summarization/1_model_training.ipynb
@@ -14,49 +14,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "BpgV1lZr9lJD"
-   },
-   "source": [
-    "## Drive mount"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "executionInfo": {
-     "elapsed": 33345,
-     "status": "ok",
-     "timestamp": 1679027485689,
-     "user": {
-      "displayName": "Cheonuk Park",
-      "userId": "04341526218995438359"
-     },
-     "user_tz": -540
-    },
-    "id": "H1xl2r6IP_Kh",
-    "outputId": "7fd04bb0-6982-4de9-dbe0-222ede537a36"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mounted at /content/drive\n"
-     ]
-    }
-   ],
-   "source": [
-    "from google.colab import drive\n",
-    "drive.mount('/content/drive')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
     "id": "Q3_6puYU9_3d"
    },
    "source": [
@@ -1053,7 +1010,7 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "df_train = pd.read_csv('train.tsv', sep='\\t')\n",
+    "df_train = pd.read_csv('./data/train.tsv', sep='\\t')\n",
     "\n",
     "df_train"
    ]
